# memoru

./: Cargo.toml  Procfile
migrations/2020-02-25-125619_create_memos/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs  views.rs
static/css/: style.css
templates/: base.html  edit.html  index.html  new.html
