[package]
name = "memoru"
version = "0.1.0"
authors = ["halship <gship@hotmail.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
dotenv = "0.15.0"
diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
askama = { version = "0.9.0", features = ["with-actix-web"] }
futures = "0.3.4"
env_logger = "0.7.1"
log = "0.4.8"
serde = { version = "1.0.104", features = ["derive"] }
actix-files = "0.2.1"
